# robotica_lab_5

./: .gitignore  CMakeLists.txt  README.md  invkine.mlx  package.xml
code/python/: draw.py  draw_workspace.py  invkine.py  jointPub.py  jointSrv.py
codigo/: CMakeLists.txt
config/: basic.yaml
launch/: controller.launch  multi_controller.launch
matlab/: invkine.m
scripts/: lab_5.py
video/: video.txt
