<package>
  <name>lab_5</name>
  <version>0.0.1</version>
  <license>MIT</license>
  <description>Lab 5 de Robotica</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
</package>
